--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>viXG Tech - Tin tức Công nghệ</title>
+    <meta name="description" content="viXG Tech - Tin tức công nghệ mới nhất">
+    <meta name="keywords" content="technology, news, gadgets, viXG">
+    <meta name="author" content="viXG Tech">
+    <meta property="og:title" content="viXG Tech - Tin tức Công nghệ">
+    <meta property="og:description" content="Cập nhật tin tức công nghệ mới nhất">
+    <meta property="og:image" content="assets/images/logo.png">
+    <meta property="og:url" content="https://vixg-tech.com">
+    <meta property="og:type" content="website">
+    <link rel="stylesheet" href="assets/css/styles.css">
+
 </head>
 
 <body>
@@ -28,13 +38,13 @@
             <li><a href=""></a>Bảo mật</li>
             <li><a href=""></a>Gaming</li>
         </ul>
-    <p>Đây là trang tin tức công nghệ của chúng tôi.</p>
-    <p>Chúng tôi cung cấp các thông tin mới nhất về công nghệ, sản phẩm và xu hướng trong ngành.</p>
-    <p>Cảm ơn bạn đã ghé thăm!</p>
+        <p>Đây là trang tin tức công nghệ của chúng tôi.</p>
+        <p>Chúng tôi cung cấp các thông tin mới nhất về công nghệ, sản phẩm và xu hướng trong ngành.</p>
+        <p>Cảm ơn bạn đã ghé thăm!</p>
 
-    <footer>
-        <p>&copy; 2025 viXG Tech. Bảo lưu mọi quyền.</p>
-    </footer>
+        <footer>
+            <p>&copy; 2025 viXG Tech. Bảo lưu mọi quyền.</p>
+        </footer>
 </body>
 
 </html>
